--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <div class="card">
 
     <div class="container">
-      <img src="./images/image-equilibrium.jpg" alt="Avatar" class="image">
+      <img src="./image-equilibrium.jpg" alt="Avatar" class="image">
       <div class="overlay">
         <svg class="ico" width="48" height="48" xmlns="http://www.w3.org/2000/svg">
           <g fill="none" fill-rule="evenodd">
@@ -200,7 +200,7 @@
     </div>
     <hr />
     <div class="ft-e">
-      <img class="avatar" src="./images/image-avatar.png" alt="avatar">
+      <img class="avatar" src="./image-avatar.png" alt="avatar">
       <p style="padding-left: 8px;"><span style="color: hsl(215, 51%, 70%);"> Creation of </span> <a class="author"
           href="#">Jules Wyvern</a> </p>
     </div>
