--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </div>
     <hr />
     <div class="ft-e">
-      <img class="avatar" src=".https://github.com/shafqatrasool11/NFTcard/blob/f8cdeaac44cfb7c0654f82b7e53d132561df0584/image-avatar.png" alt="avatar">
+      <img class="avatar" src=".image-avatar.png" alt="avatar">
       <p style="padding-left: 8px;"><span style="color: hsl(215, 51%, 70%);"> Creation of </span> <a class="author"
           href="#">Jules Wyvern</a> </p>
     </div>
