--- a/index.html
+++ b/index.html
@@ -25,14 +25,19 @@
     }
 
     .card {
-      margin: auto;
+      background-color: hsl(216, 50%, 16%);
+      border-radius: 3%;
       width: 275px;
       height: 500px;
-      background-color: hsl(216, 50%, 16%);
-      color: white;
+      align-items: center;
       padding: 20px;
-      border-radius: 10px;
-      margin-top: 60px;
+    }
+
+    .main {
+      display: flex;
+      justify-content: center;
+      min-height: 100vh;
+      align-items: center;
     }
 
     .bt {
@@ -162,6 +167,7 @@
 </head>
 
 <body>
+  <div class="mian">
   <div class="card">
 
     <div class="container">
@@ -205,7 +211,7 @@
           href="#">Jules Wyvern</a> </p>
     </div>
   </div>
-
+  </div>
   <div class="attribution">
     <p> Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
       <a href="https://facebook.com/shafqat.rasool34">Shafqat Rasool</a>.</p>
